Printing an external page without opening it leads to crash of Tab
Categories
(Core :: Printing: Output, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox90 | --- | fixed |
People
(Reporter: nils.reibold, Assigned: emilio)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.214 Safari/537.36
Steps to reproduce:
I used Javscript functions for printing as described in:
https://developer.mozilla.org/en-US/docs/Web/Guide/Printing#print_an_external_page_without_opening_it
Actual results:
The printing preview opened. After closing it (cancel / print out) the Tab becomes unresponsive.
This may be connected to the onafterprint event firing already while opening the printing preview.
After page reload the behaviour seemed to be as expected (in another example some JS execution did not work)
Expected results:
After printing / canceling in the printing preview menu the website should still be responsive.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Assignee | ||
Comment 2•4 years ago
|
||
I can repro, thanks. Simple example: http://crisal.io/tmp/print-external-page.html
Assignee | ||
Comment 3•4 years ago
|
||
If afterprint removes the window we're printing, we'd call
LeaveModalState() without a top window, and never leave the modal state.
Comment 5•4 years ago
|
||
bugherder |
Description
•