Bug 1710887 - Make modal state handling in window.print() more reliable. r=smaug

If afterprint removes the window we're printing, we'd call
LeaveModalState() without a top window, and never leave the modal state.

Differential Revision: https://phabricator.services.mozilla.com/D115007