dom/base/nsGlobalWindowOuter.h
@@ -328,7 +328,7 @@ class nsGlobalWindowOuter final : public mozilla::dom::EventTarget,
   // Outer windows only.
   virtual void EnsureSizeAndPositionUpToDate() override;
 
-  MOZ_CAN_RUN_SCRIPT_BOUNDARY virtual void EnterModalState() override;
+  MOZ_CAN_RUN_SCRIPT_BOUNDARY virtual nsGlobalWindowOuter* EnterModalState() override;
   virtual void LeaveModalState() override;
 
   // Outer windows only.
